metadata bug fix; scrollbar CSS bug fix

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -98,19 +98,17 @@ footer p {
   text-align: center;
 }
 
-.no-scrollbar::-webkit-scrollbar {
-  display: none;
-}
-
 ::-webkit-scrollbar {
   display: none;
-  width: 10px;
-  height: 10px;
+  width: 0;
+  height: 0;
 }
 
 @media (max-width: 1440px) {
   ::-webkit-scrollbar {
     display: block;
+    width: 10px;
+    height: 10px;
   }
   ::-webkit-scrollbar-track {
     background-color: rgb(110, 97, 93);
